<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E4D0D0"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/description"
        android:layout_width="334dp"
        android:layout_height="80dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="18dp"
        android:text="@string/description"
        android:textAlignment="gravity"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/etinsert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titlehead" />

    <EditText
        android:id="@+id/etinsert"
        android:layout_width="337dp"
        android:layout_height="148dp"
        android:background="#9F9292"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/black"
        android:visibility="visible"
        android:hint="X-X"
        android:textSize="60sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.387" />

    <Button
        android:id="@+id/button"
        android:layout_width="190dp"
        android:layout_height="73dp"
        android:text="@string/searchbar"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.702" />

    <TextView
        android:id="@+id/titlehead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="19dp"
        android:background="@color/white"
        android:padding="15sp"
        android:text="@string/titlehead"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.63"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="431dp"
        android:layout_height="232dp"
        android:layout_marginTop="560dp"
        android:layout_marginEnd="92dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.409"
        app:srcCompat="@drawable/fampic" />


</androidx.constraintlayout.widget.ConstraintLayout>