<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E4D0D0"
    tools:context=".Gone">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="389dp"
        android:layout_height="630dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="11dp"
        android:background="#E4D54F"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />



    <TextView
        android:id="@+id/description"
        android:layout_width="358dp"
        android:layout_height="185dp"
        android:layout_marginTop="316dp"
        android:layout_marginBottom="31dp"
        android:text="@string/gonedescription"
        android:background="@color/white"
        android:padding="5dp"
        android:textAlignment="inherit"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titlehead" />

    <Button
        android:id="@+id/button"
        android:layout_width="153dp"
        android:layout_height="47dp"
        android:text="@string/returnbar"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <TextView
        android:id="@+id/titlehead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="19dp"
        android:background="@color/white"
        android:padding="15sp"
        android:text="@string/gonetitlehead"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.057" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="297dp"
        android:layout_height="215dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="7dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titlehead"
        app:srcCompat="@drawable/gone" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="312dp"
        android:layout_height="99dp"
        android:layout_marginStart="82dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="82dp"
        android:layout_marginBottom="14dp"
        android:text="1922 - 1945"
        android:background="#FFEB3B"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


</androidx.constraintlayout.widget.ConstraintLayout>